# ncaam-dagster-jobs

./: .env  .gitignore  README.md  index.html  player_card_guide.html  player_card_guide.md  pyproject.toml  setup.cfg  setup.py
dagster_jobs/: __init__.py  run_config.yaml  run_config_rankings.yaml  run_config_rankings_women.yaml  run_config_women.yaml
dagster_jobs/assets/: archive.py  constants.py  espn.py  models.py  ops.py  queries.py  web.py  women.py
dagster_jobs/jobs/: __init__.py
dagster_jobs/partitions/: __init__.py
dagster_jobs/resources/: __init__.py
dagster_jobs/schedules/: __init__.py
dagster_jobs/templates/: player_cards_inlined_template.html  player_cards_one_column.html  player_cards_template.html  player_cards_template_all_classes.html  player_cards_template_all_loop.html  player_cards_template_all_loop_tables.html  player_cards_template_all_loop_tables_dark.html  player_cards_template_all_loop_tables_dark_gmail.html  player_cards_template_all_loop_tables_women.html  player_cards_template_all_loop_tables_women_dark_gmail.html  player_cards_template_season_rankings.html  player_cards_template_season_rankings_dark.html  player_cards_template_season_rankings_simplified.html  player_cards_template_season_rankings_simplified_dark.html  player_cards_template_season_rankings_women.html
dagster_jobs/utils/: utils.py
dagster_jobs_tests/: test_assets.py  test_resources.py
