[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_jobs"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:google._upb._message.ScalarMapContainer"
]

[tool.dg]
directory_type = "project"
project.root_module = "dagster_jobs"
project.registry_modules = [
    "dagster_jobs.components.espn_api_download",
]

[project]
name = "dagster-jobs"
version = "0.0.0"
description = ""
requires-python = ">=3.12"
dependencies = [
  "dagster==1.12.0",
  "dagster-webserver==1.12.0",
  "dagster-cloud==1.12.0",
  "dagster-duckdb",
  "pandas",
  "fasteners",
  "requests",
  "boto3",
  "python-dotenv",
  "loguru",
  "scikit-learn",
  "jinja2",
  "dagster-dg-cli>=1.12.0",
]

[project.optional-dependencies]
dev = ["pytest"]
